.gitignore toimii taas

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,14 @@ assets/themes/twitter
 css
 intra
 kuvat
+sitemap.txt
+tags.html
+run.R
+rss.xml
+pages.html
+changelog.md
+categories.html
+atom.xml
+archive.html
+404.html
+_drafts
